src/test/ui/macros/macro-use-undef.stderr
error[E0469]: imported macro not found
  --> $DIR/macro-use-undef.rs:3:24
   |
LL | #[macro_use(macro_two, no_way)] //~ ERROR imported macro not found
   |                        ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0469`.
